Bug 1253981 - Fix out of view breakpoint checkboxes in debugger. r=bgrins
MozReview-Commit-ID: IHM56SfHwjL

UltraBlame original commit: 2c9d4c7e3d2d6c5e34ab466ee0edc02c0a4d2d1f

--- a/devtools/client/themes/widgets.css
+++ b/devtools/client/themes/widgets.css
@@ -430,8 +430,13 @@
   
   padding-inline-end: 8px;
   
-  margin-inline-start: -20px;
+  margin-inline-start: -4px;
   margin-inline-end: -8px;
+}
+
+.side-menu-widget-group-title + .side-menu-widget-group-list .side-menu-widget-item-other {
+  
+  margin-inline-start: -20px;
 }
 
 .side-menu-widget-item.selected .side-menu-widget-item-other:not(.selected) {
